added vertex shader, fragment shader is unfinished

--- a/BulletHellGame/BulletHellGame.vcxproj.filters
+++ b/BulletHellGame/BulletHellGame.vcxproj.filters
@@ -23,5 +23,13 @@
     <ClInclude Include="InputHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DrawFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="BulletHellGame.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
