--- a/BulletHellGame/BulletHellGame.vcxproj
+++ b/BulletHellGame/BulletHellGame.vcxproj
@@ -132,7 +132,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DrawFunctions.h" />
+    <ClInclude Include="Shaders.h" />
     <ClInclude Include="InputHandler.h" />
   </ItemGroup>
   <ItemGroup>
