learned basic translations

--- a/CPPBulletHellGame/CPPBulletHellGame.vcxproj
+++ b/CPPBulletHellGame/CPPBulletHellGame.vcxproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="ObjectMovement.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="SpriteRenderer.h" />
