--- a/CPPBulletHellGame/CPPBulletHellGame.vcxproj.filters
+++ b/CPPBulletHellGame/CPPBulletHellGame.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClInclude Include="GameObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ObjectMovement.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Debug\Resources\Shaders\SpriteFrag.frag">
