--- a/GalagaOpenGL/GalagaOpenGL.vcxproj.filters
+++ b/GalagaOpenGL/GalagaOpenGL.vcxproj.filters
@@ -5,10 +5,6 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
@@ -22,48 +18,93 @@
     <Filter Include="Resource Files\Textures">
       <UniqueIdentifier>{c8bd389e-a10b-4db4-a29b-92cd33665f77}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine">
+      <UniqueIdentifier>{b14cb1bc-f11b-41b0-a632-d726e78a6de2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\cpp">
+      <UniqueIdentifier>{8c26ac25-f237-4a68-a915-40bb47ac6af6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\header">
+      <UniqueIdentifier>{424acab1-d99c-43a8-9a1d-c23f0f089a47}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\cpp\Graphics">
+      <UniqueIdentifier>{72c3fb59-d1c6-4380-8046-f869a00503d8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\header\Graphics">
+      <UniqueIdentifier>{51faf503-a656-4f6a-b5cb-81c7f6a00e7b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\cpp\Physics">
+      <UniqueIdentifier>{844a7bfb-640f-4898-bd2c-d3757d52e5f7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\header\Physics">
+      <UniqueIdentifier>{dca0ad56-8add-4f36-9e80-be288127c267}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\main">
+      <UniqueIdentifier>{4829412b-a034-430b-a6c6-d8ac5b064cff}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\main\cpp">
+      <UniqueIdentifier>{794a0cea-5eaf-4149-b202-04ba729229af}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\main\header">
+      <UniqueIdentifier>{5c83f89f-2aa7-4ed9-8aa7-d9a82c52be70}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\util">
+      <UniqueIdentifier>{571fa515-4ceb-48b5-bf4b-14f371c10a16}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Game.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ResourceManager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Shader.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="SpriteRenderer.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Engine\cpp</Filter>
     </ClCompile>
     <ClCompile Include="Texture.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Engine\cpp\Graphics</Filter>
     </ClCompile>
     <ClCompile Include="TextRenderer.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Engine\cpp\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="SpriteRenderer.cpp">
+      <Filter>Engine\cpp\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="Shader.cpp">
+      <Filter>Engine\cpp\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerObject.cpp">
+      <Filter>Engine\main\cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="EnemyObject.cpp">
+      <Filter>Engine\main\cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>Engine\main\cpp</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Game.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Shader.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Texture.h">
-      <Filter>Header Files</Filter>
+      <Filter>Engine\header\Graphics</Filter>
     </ClInclude>
     <ClInclude Include="SpriteRenderer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ResourceManager.h">
-      <Filter>Header Files</Filter>
+      <Filter>Engine\header\Graphics</Filter>
     </ClInclude>
     <ClInclude Include="TextRenderer.h">
-      <Filter>Header Files</Filter>
+      <Filter>Engine\header\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>Engine\header\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="ResourceManager.h">
+      <Filter>Engine\main\header</Filter>
+    </ClInclude>
+    <ClInclude Include="Game.h">
+      <Filter>Engine\main\header</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerObject.h">
+      <Filter>Engine\main\header</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyObject.h">
+      <Filter>Engine\main\header</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
